# Wild-Engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  ImGuiSettings.ini  README.md
Assets/Models/bistro/bistro/: bistro.gltf
Shaders/: CMakeLists.txt  CascadedShadowsFrag.slang  CascadedShadowsVert.slang  DeferredFrag.slang  DeferredVert.slang  DrawTerrainFrag.slang  DrawTerrainVert.slang  FragCopyRT.slang  FragDeferred.slang  FragPbr.slang  OceanRenderFrag.slang  OceanRenderVert.slang  PbrFrag.slang  PbrVert.slang  ProceduralTerrainCompute.slang  ShadowInc.slang  SkyboxFrag.slang  SkyboxVert.slang  VertCopyRT.slang  VertPbr.slang  computeClearCounter.hlsl  computeGrassCull.hlsl  computeGrassDataShader.hlsl  computeIndirectCmdCreation.hlsl  fragCopyRT.hlsl  fragGrassShader.hlsl  fragShader.hlsl  vertCopyRT.hlsl  vertGrassShader.hlsl  vertShader.hlsl
Shaders/DDGI/: RayTracingUtils.slang  ddgiBlend.slang  ddgiRaytrace.slang
Shaders/DebugTools/: LineDebugFrag.slang  LineDebugVert.slang  ProbeDebugFrag.slang  ProbeDebugVert.slang
Shaders/Grass/: ComputeClearCounter.slang  ComputeGrassCulling.slang  ComputeIndirectCommands.slang  ComputePerGrassBladeData.slang  ComputePerGrassData.slang  FragGrass.slang  GrassCommon.slang  VertGrass.slang
Shaders/Grass/MeshShader/: ProceduralGrassMS.slang
Shaders/Helper/: Common.slang  PbrFormulas.slang  Rng.slang
Shaders/ImageBasedLighting/: CaptureIBLFrag.slang  CaptureIBLVert.slang  GenerateBrdfLut.slang  GenerateIrradianceMapFrag.slang  GenerateSpecularMap.slang
Shaders/Ocean/: AssembleOcean.slang  ConjugateSpectrum.slang  FoamFilter.slang  InitialSpectrum.slang  InverseFFT.slang  OceanCommon.slang  UpdateSpectrum.slang
Shaders/PostProcess/: FinalPostProcess.slang  Formula.slang  FoxelFogPass.slang  VolumetricNoise.slang  Volumetrics.slang
Wild/: EntryPoint.cpp  Precomp.hpp
Wild/Core/: Camera.cpp  Camera.hpp  ECS.cpp  ECS.hpp  Engine.cpp  Engine.hpp  Guid.hpp  ImGuiCore.cpp  ImGuiCore.hpp  Transform.cpp  Transform.hpp
Wild/Core/ImGui/: ImGuiCore.cpp  ImGuiCore.hpp
Wild/Editor/: EditorIcons.hpp  EditorLogSink.hpp  EditorPanel.hpp  EditorState.hpp  EditorTheme.cpp  EditorTheme.hpp  EditorWidgets.cpp  EditorWidgets.hpp  PanelManager.cpp  PanelManager.hpp
Wild/Editor/Panels/: AssetBrowserPanel.cpp  AssetBrowserPanel.hpp  ConsolePanel.cpp  ConsolePanel.hpp  DebugPanel.cpp  DebugPanel.hpp  HierarchyPanel.cpp  HierarchyPanel.hpp  InspectorPanel.cpp  InspectorPanel.hpp  ProfilerPanel.cpp  ProfilerPanel.hpp  SystemPanels.cpp  SystemPanels.hpp  ViewportPanel.cpp  ViewportPanel.hpp
Wild/Renderer/: AccelerationStructure.cpp  AccelerationStructure.hpp  CommandList.cpp  CommandList.hpp  CommandQueue.cpp  CommandQueue.hpp  Device.cpp  Device.hpp  Fence.cpp  Fence.hpp  GfxContext.cpp  PipelineStateBuilder.cpp  PipelineStateBuilder.hpp  RaytracingPipeline.cpp  RaytracingPipeline.hpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  RootSignatureBuilder.cpp  RootSignatureBuilder.hpp  ShaderPipeline.cpp  ShaderPipeline.hpp  Swapchain.cpp  Swapchain.hpp  Window.cpp  Window.hpp
Wild/Renderer/Passes/: CascadedShadowPass.cpp  CascadedShadowPass.hpp  DDGIPass.cpp  DDGIPass.hpp  DebugLinePass.cpp  DebugLinePass.hpp  DeferredPass.cpp  DeferredPass.hpp  GrassPass.cpp  GrassPass.hpp  OceanPass.cpp  OceanPass.hpp  PbrPass.cpp  PbrPass.hpp  PostProcessPass.cpp  PostProcessPass.hpp  ProbeDebugPass.cpp  ProbeDebugPass.hpp  ProceduralTerrainPass.cpp  ProceduralTerrainPass.hpp  SkyboxPass.cpp  SkyboxPass.hpp
Wild/Renderer/Passes/ProceduralGrass/: GPUDrivenGrass.cpp  GPUDrivenGrass.hpp  IndirectGrass.cpp  IndirectGrass.hpp  MeshShaderGrass.cpp  MeshShaderGrass.hpp
Wild/Renderer/Raytracing/: GlobalGeometryBuffer.cpp  GlobalGeometryBuffer.hpp
Wild/Renderer/RenderGraph/: Blackboard.hpp  RenderGraph.cpp  RenderGraph.hpp  RenderPass.hpp  TransientResourceCache.hpp
Wild/Renderer/Resources/: Buffer.cpp  Buffer.hpp  D3D12Resource.cpp  D3D12Resource.hpp  LightTypes.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Resource3d12.cpp  Resource3d12.hpp  Texture.cpp  Texture.hpp
Wild/Systems/: GrassCompute.cpp  GrassCompute.hpp  GrassManager.cpp  GrassManager.hpp  LightSystem.cpp  LightSystem.hpp  OceanChunkSystem.cpp  OceanChunkSystem.hpp  ProbeSystem.cpp  ProbeSystem.hpp  ResourceSystem.cpp  ResourceSystem.hpp  SceneManager.cpp  SceneManager.hpp  SceneSerializer.cpp  SceneSerializer.hpp  SystemManager.hpp  UndoSystem.cpp  UndoSystem.hpp
Wild/Systems/Physics/: PhysicsSystem.cpp  PhysicsSystem.hpp  PhysicsTypes.hpp
Wild/Tools/: Common3d12.hpp  D3D12Views.cpp  DescriptorAllocator.cpp  DescriptorAllocator.hpp  DeviceCapabilities.cpp  DeviceCapabilities.hpp  InputElement.hpp  Log.cpp  Log.hpp  StateTransfer.hpp  States.hpp  Types3d12.hpp  View3d12.cpp  View3d12.hpp
Wild/Tools/Profiler/: Profiler.cpp  Profiler.hpp
Wild/Tools/TangentGeneration/: MikktDataExtractor.cpp  MikktDataExtractor.hpp
